[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexity-mcp"
version = "0.1.0"
description = "Tiny MCP server for Perplexity Sonar web search"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
perplexity-mcp = "perplexity_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/perplexity_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
